tests/invalid/native_method_not_supported.wio
object NativeHolder {
    @Native
    fn GetValue() -> i32;
}

fn Entry() -> i32 {
    return 0;
}
